Fix scrollbar for firefox

--- a/src/styles/mobile/work.scss
+++ b/src/styles/mobile/work.scss
@@ -1,6 +1,8 @@
 .work {
 	height: 100vh;
 	overflow: scroll;
+	-ms-overflow-style: none; /* IE 11 */
+	scrollbar-width: none; /* Firefox 64 */
 
 	.containerOuter {
 		display: flex;
